editors/tree-sitter-lisette/grammar.js
    source_file: $ => seq(optional($.shebang), repeat($._statement)),

    _statement: $ => choice(
      $.expression_statement,
      $._declaration_statement,
    ),

    _semicolon: $ => choice(';', $._automatic_semicolon),

    expression_statement: $ => choice(
      seq($._expression, $._semicolon),
      prec(1, $._expression_ending_with_block),
    ),

    _declaration_statement: $ => choice(
      $.const_item,
      $.empty_statement,
      $.attribute_item,
      $.struct_item,
      $.enum_item,
      $.type_item,
      $.function_item,
      $.function_signature_item,
      $.impl_item,
      $.interface_item,
      $.let_declaration,
      $.var_declaration,
      $.import_declaration,
      $.defer_statement,
      $.task_statement,
      $.assert_statement,
    ),

    // Attributes

    struct_item: $ => seq(
      optional($.visibility_modifier),
      'struct',
      field('name', $._type_identifier),
      field('type_parameters', optional($.type_parameters)),
      choice(
        field('body', $.field_declaration_list),
        field('body', $.ordered_field_declaration_list),
      ),
    ),

    enum_item: $ => seq(
      optional($.visibility_modifier),
      'enum',
      field('name', $._type_identifier),
      field('type_parameters', optional($.type_parameters)),
      field('body', $.enum_variant_list),
    ),

    enum_variant_list: $ => bracedList(seq(
      repeat($.attribute_item), optional($.doc_comment), $.enum_variant,
    )),

    enum_variant: $ => seq(
      field('name', $.identifier),
      field('body', optional(choice(
        $.field_declaration_list,
        $.ordered_field_declaration_list,
      ))),
    ),

    field_declaration_list: $ => bracedList(seq(
      repeat($.attribute_item),
      optional($.doc_comment),
      choice($.field_declaration, $.struct_embedding),
    )),

    field_declaration: $ => seq(
      optional($.visibility_modifier),
      field('name', choice(
        $._field_identifier,
        alias('embed', $.field_identifier),
      )),
      ':',
      field('type', $._type),
    ),

    ordered_field_declaration_list: $ => parenList(seq(
      repeat($.attribute_item),
      optional($.visibility_modifier),
      field('type', $._type),
    )),

    function_item: $ => seq(
      optional($.visibility_modifier),
      'fn',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameters)),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._type))),
      field('body', $.block),
    ),

    impl_item: $ => seq(
      'impl',
      field('type_parameters', optional($.type_parameters)),
      field('type', choice(
        $._type_identifier,
        $.scoped_type_identifier,
        $.generic_type,
        $.writable_type,
      )),
      field('body', $.declaration_list),
    ),

    declaration_list: $ => seq(
      '{',
      repeat($._declaration_statement),
      '}',
    ),

    // Parameters

    parameters: $ => parenList(seq(
      optional($.attribute_item),
      choice(
        $.parameter,
        $.self_parameter,
        '_',
      ),
    )),

    parameter_types: $ => parenList(choice($._type, '_')),

    self_parameter: $ => 'self',

    parameter: $ => seq(
      field('pattern', choice(
        $._pattern,
        'self',
      )),
      ':',
      field('type', $._type),
    ),

    mutable_specifier: _ => 'mut',

    // Type parameters

    type_parameters: $ => prec(1, seq(
      '<',
      sepBy1(',', seq(
        repeat($.attribute_item),
        $.type_parameter,
      )),
      optional(','),
      '>',
    )),

    type_parameter: $ => prec(1, seq(
      field('name', $._type_identifier),
      optional(field('bounds', $.trait_bounds)),
    )),

    _type: $ => choice(
      $.writable_type,
      $.generic_type,
      $.scoped_type_identifier,
      $.tuple_type,
      $.unit_type,
      $.function_type,
      $._type_identifier,
      $.never_type,
    ),

    writable_type: $ => seq(
      $.mutable_specifier,
      choice(
        $.generic_type,
        $.scoped_type_identifier,
        $._type_identifier,
      ),
    ),

    generic_type: $ => prec(1, seq(
      field('type', choice(
        $._type_identifier,
        $.scoped_type_identifier,
      )),
      field('type_arguments', $.type_arguments),
    )),

    scoped_type_identifier: $ => prec.left(seq(
      field('path', choice(
        $._type_identifier,
        $.scoped_type_identifier,
        $.generic_type,
      )),
      '.',
      field('name', $._type_identifier),
    )),

    type_arguments: $ => prec(-1, seq(
      '<',
      sepBy1(',', choice(
        $._type,
        $._literal,
      )),
      optional(','),
      '>',
    )),

    function_type: $ => seq(
      'fn',
      field('parameters', $.parameter_types),
      optional(seq('->', field('return_type', $._type))),
    ),

    tuple_type: $ => seq(
      '(',
      sepBy1(',', $._type),
      optional(','),
      ')',
    ),

    never_type: _ => 'Never',

    // Expressions

    _expression_except_range: $ => choice(
      $.unary_expression,
      $.reference_expression,
      $.try_expression,
      $.binary_expression,
      $.assignment_expression,
      $.compound_assignment_expression,
      $.type_cast_expression,
      $.call_expression,
      $.generic_call_expression,
      $.return_expression,
      $._literal,
      prec.left($.identifier),
      $.self,
      $.field_expression,
      $.slice_expression,
      $.tuple_expression,
      $.unit_expression,
      $.break_expression,
      $.continue_expression,
      $.index_expression,
      $.closure_expression,
      $.parenthesized_expression,
      $.struct_expression,
      $.deref_expression,
      $.rawgo_directive,
      $._expression_ending_with_block,
    ),

    _expression: $ => choice(
      $._expression_except_range,
      $.range_expression,
    ),

    _expression_ending_with_block: $ => choice(
      $.block,
      $.if_expression,
      $.if_let_expression,
      $.match_expression,
      $.while_expression,
      $.while_let_expression,
      $.loop_expression,
      $.for_expression,
      $.select_expression,
      $.try_block,
      $.recover_block,
    ),

    // Binary / unary / postfix expressions

    range_expression: $ => prec.left(PREC.range, choice(
      seq($._expression, choice('..', '..='), $._expression),
      seq($._expression, '..'),
      seq('..', $._expression),
      seq('..=', $._expression),
      '..',
    )),

    try_expression: $ => prec(PREC.try, seq(
      $._expression,
      '?',
    )),

    binary_expression: $ => {
      const table = [
        [PREC.pipeline, '|>'],
        [PREC.and, '&&'],
        [PREC.or, '||'],
        [PREC.comparative, choice('==', '!=', '<=', '>=')],
        [PREC.additive, choice('+', '-', '|', '^')],
        [PREC.multiplicative, choice('*', '/', '%', '<<', '>>', '&', '&^')],
      ];

      return choice(
        // @ts-ignore
        ...table.map(([precedence, operator]) => prec.left(precedence, seq(
          field('left', $._expression),
          // @ts-ignore
          field('operator', operator),
          field('right', $._expression),
        ))),
        prec.left(PREC.comparative, seq(
          field('left', $._expression),
          field('operator', '<'),
          field('right', $._expression),
        )),
        prec.left(PREC.comparative, seq(
          field('left', $._expression),
          field('operator', '>'),
          field('right', $._expression),
        )),
      );
    },

    assignment_expression: $ => prec.left(PREC.assign, seq(
      field('left', $._expression),
      '=',
      field('right', $._expression),
    )),

    compound_assignment_expression: $ => prec.left(PREC.assign, seq(
      field('left', $._expression),
      field('operator', choice('+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', '&^=', '<<=', '>>=')),
      field('right', $._expression),
    )),

    call_expression: $ => prec(PREC.call, seq(
      field('function', $._expression_except_range),
      field('arguments', $.arguments),
    )),

    arguments: $ => parenList(choice($._expression, $.spread_argument)),

    tuple_expression: $ => seq(
      '(',
      seq($._expression, ','),
      repeat(seq($._expression, ',')),
      optional($._expression),
      ')',
    ),

    if_expression: $ => prec.right(seq(
      'if',
      field('condition', $._expression),
      field('consequence', $.block),
      optional(field('alternative', $.else_clause)),
    )),

    if_let_expression: $ => prec.right(seq(
      'if',
      'let',
      field('pattern', $._pattern),
      '=',
      field('value', $._expression),
      field('consequence', $.block),
      optional(field('alternative', $.else_clause)),
    )),

    else_clause: $ => seq(
      'else',
      choice(
        $.block,
        $.if_expression,
        $.if_let_expression,
      ),
    ),

    match_expression: $ => seq(
      'match',
      field('value', $._expression),
      field('body', $.match_block),
    ),

    match_block: $ => seq(
      '{',
      optional(seq(
        repeat($.match_arm),
        alias($.last_match_arm, $.match_arm),
      )),
      '}',
    ),

    match_arm: $ => prec.right(seq(
      field('pattern', $.match_pattern),
      '=>',
      choice(
        seq(field('value', $._expression), ','),
        field('value', prec(1, $._expression_ending_with_block)),
      ),
    )),

    match_pattern: $ => seq(
      $._pattern,
      optional(seq('if', field('condition', $._expression))),
    ),

    while_expression: $ => seq(
      'while',
      field('condition', $._expression),
      field('body', $.block),
    ),

    while_let_expression: $ => seq(
      'while',
      'let',
      field('pattern', $._pattern),
      '=',
      field('value', $._expression),
      field('body', $.block),
    ),

    loop_expression: $ => seq(
      'loop',
      field('body', $.block),
    ),

    for_expression: $ => seq(
      'for',
      optional($.mutable_specifier),
      field('pattern', $._pattern),
      'in',
      field('value', $._expression),
      field('body', $.block),
    ),

    break_expression: $ => prec.left(seq('break', optional($._expression))),

    task_statement: $ => choice(
      prec(1, seq('task', $.block)),
      seq('task', $._expression, $._semicolon),
    ),

    defer_statement: $ => choice(
      prec(1, seq('defer', $.block)),
      seq('defer', $._expression, $._semicolon),
    ),

    assert_statement: $ => seq('assert', field('condition', $._expression), $._semicolon),

    select_expression: $ => seq(
      'select',
      bracedList($.select_arm),
    ),

    select_arm: $ => choice(
      $.select_receive_arm,
      $.select_send_arm,
      $.select_match_arm,
      $.select_default_arm,
    ),

    select_default_arm: $ => seq(
      '_',
      '=>',
      field('body', $._expression),
    ),

    // Error handling

    try_block: $ => seq(
      'try',
      $.block,
    ),

    recover_block: $ => seq(
      'recover',
      $.block,
    ),

    // Closures

    index_expression: $ => prec(PREC.call, seq(
      $._expression,
      '[',
      $._expression,
      ']',
    )),

    field_expression: $ => prec(PREC.field, seq(
      field('value', $._expression),
      '.',
      field('field', choice(
        $._field_identifier,
        $.integer_literal,
      )),
    )),

    // Blocks

    block: $ => seq(
      '{',
      repeat($._statement),
      optional($._expression),
      '}',
    ),

    // Let / var

    let_declaration: $ => seq(
      'let',
      optional('assert'),
      optional($.mutable_specifier),
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('value', $._expression))),
      optional(seq(
        'else',
        field('alternative', $.block),
      )),
      $._semicolon,
    ),

    // Directives

    _pattern: $ => choice(
      $._literal_pattern,
      $.identifier,
      $.scoped_type_identifier,
      $.tuple_pattern,
      $.tuple_struct_pattern,
      $.struct_pattern,
      $.slice_pattern,
      $.or_pattern,
      $.as_binding_pattern,
      $.remaining_field_pattern,
      '_',
    ),

    tuple_struct_pattern: $ => seq(
      field('type', choice(
        $.identifier,
        $.scoped_type_identifier,
      )),
      parenList($._pattern),
    ),

    _literal: $ => choice(
      $.string_literal,
      $.raw_string_literal,
      $.char_literal,
      $.boolean_literal,
      $.integer_literal,
      $.float_literal,
      $.imaginary_literal,
      $.format_string,
    ),

    integer_literal: _ => token(seq(
      choice(
        /[0-9][0-9_]*/,
        /0x[0-9a-fA-F_]+/,
        /0b[01_]+/,
        /0o[0-7_]+/,
      ),
    )),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        $.escape_sequence,
        $.string_content,
      )),
      token.immediate('"'),
    ),

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

    self: _ => 'self',

    _type_identifier: $ => alias($.identifier, $.type_identifier),
    _field_identifier: $ => alias($.identifier, $.field_identifier),
  },
});
