editors/tree-sitter-lisette/test/corpus/types.txt
================================================================================
Simple type
================================================================================

let x: int = 0

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    type: (type_identifier)
    value: (integer_literal)))

================================================================================
Generic type
================================================================================

let x: Vec<int> = make()

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    type: (generic_type
      type: (type_identifier)
      type_arguments: (type_arguments
        (type_identifier)))
    value: (call_expression
      function: (identifier)
      arguments: (arguments))))

================================================================================
Nested generic
================================================================================

let x: Map<string, Vec<int>> = make()

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    type: (generic_type
      type: (type_identifier)
      type_arguments: (type_arguments
        (type_identifier)
        (generic_type
          type: (type_identifier)
          type_arguments: (type_arguments
            (type_identifier)))))
    value: (call_expression
      function: (identifier)
      arguments: (arguments))))

================================================================================
Tuple type
================================================================================

let x: (int, string) = (1, "a")

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    type: (tuple_type
      (type_identifier)
      (type_identifier))
    value: (tuple_expression
      (integer_literal)
      (string_literal
        (string_content)))))

================================================================================
Function type
================================================================================

let f: fn(int) -> int = add

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    type: (function_type
      parameters: (parameter_types
        (type_identifier))
      return_type: (type_identifier))
    value: (identifier)))

================================================================================
Never type
================================================================================

let x: Never = panic()

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    type: (never_type)
    value: (call_expression
      function: (identifier)
      arguments: (arguments))))

================================================================================
Type parameters
================================================================================

fn id<T>(x: T) -> T { x }

--------------------------------------------------------------------------------

(source_file
  (function_item
    name: (identifier)
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier)))
    parameters: (parameters
      (parameter
        pattern: (identifier)
        type: (type_identifier)))
    return_type: (type_identifier)
    body: (block
      (identifier))))

================================================================================
Scoped type
================================================================================

let x: io.Reader = r

--------------------------------------------------------------------------------

(source_file
  (let_declaration
    pattern: (identifier)
    type: (scoped_type_identifier
      path: (type_identifier)
      name: (type_identifier))
    value: (identifier)))

================================================================================
Writable type
================================================================================

fn fill(items: mut Slice<int>) { }

--------------------------------------------------------------------------------

(source_file
  (function_item
    name: (identifier)
    parameters: (parameters
      (parameter
        pattern: (identifier)
        type: (writable_type
          (mutable_specifier)
          (generic_type
            type: (type_identifier)
            type_arguments: (type_arguments
              (type_identifier))))))
    body: (block)))

================================================================================
Writable type in a type argument
================================================================================

fn double_all(rows: mut Slice<mut Slice<int>>) { }

--------------------------------------------------------------------------------

(source_file
  (function_item
    name: (identifier)
    parameters: (parameters
      (parameter
        pattern: (identifier)
        type: (writable_type
          (mutable_specifier)
          (generic_type
            type: (type_identifier)
            type_arguments: (type_arguments
              (writable_type
                (mutable_specifier)
                (generic_type
                  type: (type_identifier)
                  type_arguments: (type_arguments
                    (type_identifier)))))))))
    body: (block)))

================================================================================
Writable variadic
================================================================================

fn overwrite(xs: mut VarArgs<int>) { }

--------------------------------------------------------------------------------

(source_file
  (function_item
    name: (identifier)
    parameters: (parameters
      (parameter
        pattern: (identifier)
        type: (writable_type
          (mutable_specifier)
          (generic_type
            type: (type_identifier)
            type_arguments: (type_arguments
              (type_identifier))))))
    body: (block)))

================================================================================
Writable return type
================================================================================

fn words() -> mut Slice<string> { xs }

--------------------------------------------------------------------------------

(source_file
  (function_item
    name: (identifier)
    parameters: (parameters)
    return_type: (writable_type
      (mutable_specifier)
      (generic_type
        type: (type_identifier)
        type_arguments: (type_arguments
          (type_identifier))))
    body: (block
      (identifier))))

================================================================================
Writable field
================================================================================

struct Index { counts: mut Map<string, int> }

--------------------------------------------------------------------------------

(source_file
  (struct_item
    name: (type_identifier)
    body: (field_declaration_list
      (field_declaration
        name: (field_identifier)
        type: (writable_type
          (mutable_specifier)
          (generic_type
            type: (type_identifier)
            type_arguments: (type_arguments
              (type_identifier)
              (type_identifier))))))))

================================================================================
Writable enum payload
================================================================================

enum Holder { Tags(mut Slice<string>) }

--------------------------------------------------------------------------------

(source_file
  (enum_item
    name: (type_identifier)
    body: (enum_variant_list
      (enum_variant
        name: (identifier)
        body: (ordered_field_declaration_list
          type: (writable_type
            (mutable_specifier)
            (generic_type
              type: (type_identifier)
              type_arguments: (type_arguments
                (type_identifier)))))))))

================================================================================
Writable receiver
================================================================================

impl Index {
  fn add(self: mut Ref<Index>) { }
}

--------------------------------------------------------------------------------

(source_file
  (impl_item
    type: (type_identifier)
    body: (declaration_list
      (function_item
        name: (identifier)
        parameters: (parameters
          (parameter
            type: (writable_type
              (mutable_specifier)
              (generic_type
                type: (type_identifier)
                type_arguments: (type_arguments
                  (type_identifier))))))
        body: (block)))))

================================================================================
Writable impl target
================================================================================

impl mut Index {
  fn first(self) -> int { self.items[0] }
}

--------------------------------------------------------------------------------

(source_file
  (impl_item
    type: (writable_type
      (mutable_specifier)
      (type_identifier))
    body: (declaration_list
      (function_item
        name: (identifier)
        parameters: (parameters
          (self_parameter))
        return_type: (type_identifier)
        body: (block
          (index_expression
            (field_expression
              value: (self)
              field: (field_identifier))
            (integer_literal)))))))
